# coco

./: .gitignore  Cargo.toml  README.md  justfile
frontend/: .prettierrc.json  index.html  index.ts  login.html  login.ts  tsconfig.json
frontend/admin/: index.html  index.ts  login.html  login.ts
src/: admin.rs  common.rs  election.rs  error.rs  frontend.rs  main.rs  participant.rs  participants.rs  state.rs
src/state/: mod.rs
