[package]
name = "coco"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "net",
    "sync",
] }

hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["local-time"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

rand = "0.9"

thiserror = "2"
